syntax = "proto3";

package case29;

import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "github.com/yimi-go/protoc-gen-validate-jsonschema/module/internal/tests/case29;case29";

message StringWrapperTestMsg {
  // aaa
  //
  // bbb
  google.protobuf.StringValue desc = 1;
  google.protobuf.StringValue no_rule = 2 [(validate.rules) = {}];
  google.protobuf.StringValue blank_rule = 3 [(validate.rules) = {
    string: {}
  }];
  google.protobuf.StringValue const = 4 [(validate.rules) = {
    string: {const: "abc"}
  }];
  google.protobuf.StringValue min_len = 5 [(validate.rules) = {
    string: {min_len: 3}
  }];
  google.protobuf.StringValue len = 6 [(validate.rules) = {
    string: {len: 5}
  }];
  google.protobuf.StringValue min_len_lt_len = 7 [(validate.rules) = {
    string: {
      min_len: 4,
      len: 5,
    }
  }];
  google.protobuf.StringValue min_len_eq_len = 8 [(validate.rules) = {
    string: {
      min_len: 5,
      len: 5,
    }
  }];
  google.protobuf.StringValue min_len_gt_len = 9 [(validate.rules) = {
    string: {
      min_len: 6,
      len: 5,
    }
  }];
  google.protobuf.StringValue max_len = 10 [(validate.rules) = {
    string: {max_len: 5}
  }];
  google.protobuf.StringValue max_len_lt_len = 11 [(validate.rules) = {
    string: {
      max_len: 4,
      len: 5,
    }
  }];
  google.protobuf.StringValue max_len_eq_len = 12 [(validate.rules) = {
    string: {
      max_len: 5,
      len: 5,
    }
  }];
  google.protobuf.StringValue max_len_gt_len = 13 [(validate.rules) = {
    string: {
      max_len: 6,
      len: 5,
    }
  }];
  google.protobuf.StringValue len_bytes = 14 [(validate.rules) = {
    string: {len_bytes: 5}
  }];
  google.protobuf.StringValue min_bytes = 15 [(validate.rules) = {
    string: {min_bytes: 5}
  }];
  google.protobuf.StringValue min_bytes_lt_len_bytes = 16 [(validate.rules) = {
    string: {
      min_bytes: 4,
      len_bytes: 5,
    }
  }];
  google.protobuf.StringValue min_bytes_eq_len_bytes = 17 [(validate.rules) = {
    string: {
      min_bytes: 5,
      len_bytes: 5,
    }
  }];
  google.protobuf.StringValue min_bytes_gt_len_bytes = 18 [(validate.rules) = {
    string: {
      min_bytes: 6,
      len_bytes: 5,
    }
  }];
  google.protobuf.StringValue max_bytes = 19 [(validate.rules) = {
    string: {max_bytes: 5}
  }];
  google.protobuf.StringValue max_bytes_lt_len_bytes = 20 [(validate.rules) = {
    string: {
      max_bytes: 4,
      len_bytes: 5,
    }
  }];
  google.protobuf.StringValue max_bytes_eq_len_bytes = 21 [(validate.rules) = {
    string: {
      max_bytes: 5,
      len_bytes: 5,
    }
  }];
  google.protobuf.StringValue max_bytes_gt_len_bytes = 22 [(validate.rules) = {
    string: {
      max_bytes: 6,
      len_bytes: 5,
    }
  }];
  google.protobuf.StringValue pattern = 23 [(validate.rules) = {
    string: {pattern: "a.*b"}
  }];
  google.protobuf.StringValue prefix = 24 [(validate.rules) = {
    string: {prefix: "a*"}
  }];
  google.protobuf.StringValue suffix = 25 [(validate.rules) = {
    string: {suffix: ".z"}
  }];
  google.protobuf.StringValue contains = 26 [(validate.rules) = {
    string: {contains: "(op)q"}
  }];
  google.protobuf.StringValue prefix_suffix = 27 [(validate.rules) = {
    string: {
      prefix: "a",
      suffix: "z"
    }
  }];
  google.protobuf.StringValue not_contains = 28 [(validate.rules) = {
    string: {not_contains: "z*z"}
  }];
  google.protobuf.StringValue in = 29 [(validate.rules) = {
    string: {
      in: [
        "a",
        "b",
        "c"
      ]
    }
  }];
  google.protobuf.StringValue not_in = 30 [(validate.rules) = {
    string: {
      not_in: [
        "x",
        "y",
        "z"
      ]
    }
  }];
  google.protobuf.StringValue not_in_not_contains = 31 [(validate.rules) = {
    string: {
      not_in: ["a", "b"],
      not_contains: "xyz"
    }
  }];
  google.protobuf.StringValue email = 32 [(validate.rules) = {
    string: {email: true}
  }];
  google.protobuf.StringValue hostname = 33 [(validate.rules) = {
    string: {hostname: true}
  }];
  google.protobuf.StringValue ip = 34 [(validate.rules) = {
    string: {ip: true}
  }];
  google.protobuf.StringValue ipv4 = 35 [(validate.rules) = {
    string: {ipv4: true}
  }];
  google.protobuf.StringValue ipv6 = 36 [(validate.rules) = {
    string: {ipv6: true}
  }];
  google.protobuf.StringValue uri = 37 [(validate.rules) = {
    string: {uri: true}
  }];
  google.protobuf.StringValue uri_ref = 38 [(validate.rules) = {
    string: {uri_ref: true}
  }];
  google.protobuf.StringValue address = 39 [(validate.rules) = {
    string: {address: true}
  }];
  google.protobuf.StringValue uuid = 40 [(validate.rules) = {
    string: {uuid: true}
  }];
  google.protobuf.StringValue well_known_regex_http_header_name = 41 [(validate.rules) = {
    string: {well_known_regex: HTTP_HEADER_NAME}
  }];
  google.protobuf.StringValue well_known_regex_http_header_value = 42 [(validate.rules) = {
    string: {well_known_regex: HTTP_HEADER_VALUE}
  }];
  google.protobuf.StringValue well_known_regex_unknown = 43 [(validate.rules) = {
    string: {well_known_regex: UNKNOWN}
  }];
  google.protobuf.StringValue strict = 44 [(validate.rules) = {
    string: {strict: true}
  }];
}